Code updated for gnome-shell v44

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,2 +1,9 @@
-.space {
-    spacing: 6px; }
+.replace-ext-icon-cnt {
+    padding: 0;
+    /* color: greenyellow; */
+}
+
+.replace-ext-text-cnt {
+    padding: 0;
+    /* color: greenyellow; */
+}
